--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-A small perl script to automate logging in UWaterloo's uw-unsecure network.
+A small perl script to automate logging in UWaterloo's uw-unsecured network.
